--- a/index.css
+++ b/index.css
@@ -1,133 +1,153 @@
-#l1
-{
-    opacity: 0;
-    animation-duration: 1.2s; 
-    animation-name:l1;
-  
-    animation-delay:0s;
-    animation-iteration-count: infinite;
-  }
-@keyframes l1{
-    0% { display: block;opacity: 0;}
-    100%{display: block;opacity: 1;}
-}
-#l2
-{
-    opacity:0;
-    animation-duration: 1.2s; 
-    animation-name:l1; 
-    animation-delay:0.1s;
-    animation-iteration-count: infinite;
-  }
-  #l3
-  {
-    opacity: 0;
-    animation-duration: 1.2s; 
-    animation-name:l1;
-      animation-delay:0.2s;
-      animation-iteration-count: infinite;
-    }
-    #l4
-{
-    opacity: 0;
-    animation-duration:1.2s; 
-    animation-name:l1; 
-    animation-delay:0.3s;
-    animation-iteration-count: infinite;
-  }
-  #l5
-{
-    opacity: 0;
-    animation-duration: 1.2s; 
-    animation-name:l1;
-    animation-delay:0.4s;
-    animation-iteration-count: infinite;
-  }
-  #l6
-{
-    opacity: 0;
-    animation-duration: 1.2s; 
-    animation-name:l1; 
-    animation-delay:0.5s;
-    animation-iteration-count: infinite;
-  }
-  #l7
-{
-    opacity: 0;
-    animation-duration: 1.2s; 
-    animation-name:l1;
-    animation-delay:0.6s;
-    animation-iteration-count: infinite;
-  }
-  #l8
-{
-    opacity: 0;
-    animation-duration: 1.2s; 
-    animation-name:l1; 
-    animation-delay:0.7s;
-    animation-iteration-count: infinite;
-  }
-  #l9
-{
-    opacity: 0;
-    animation-duration: 1.2s; 
-    animation-name:l1;
-    animation-delay:0.8s;
-    animation-iteration-count: infinite;
-  }
- #add
- {
-     width: 100%;
-     animation-name: let;
-     animation-duration: 0.6s;
- }
- @keyframes let{
-     0%{width: 85%;}
+#l1 {
+  opacity: 0;
+  animation-duration: 1.2s;
+  animation-name: l1;
 
-     100%{width:100%;}
- }
- @keyframes hello{
-     0%{display: none;opacity: 0;}
-     100%{display: none;opacity: 1;}
- }
- #add1
- {
-     opacity: 1;
-     margin-left:0px;
-     width: 100%;
-     animation-name: let;
-     animation-duration: 1.8s;
+  animation-delay: 0s;
+  animation-iteration-count: infinite;
+}
+@keyframes l1 {
+  0% {
+    display: block;
+    opacity: 0;
+  }
+  100% {
+    display: block;
+    opacity: 1;
+  }
+}
+#l2 {
+  opacity: 0;
+  animation-duration: 1.2s;
+  animation-name: l1;
+  animation-delay: 0.1s;
+  animation-iteration-count: infinite;
+}
+#l3 {
+  opacity: 0;
+  animation-duration: 1.2s;
+  animation-name: l1;
+  animation-delay: 0.2s;
+  animation-iteration-count: infinite;
+}
+#l4 {
+  opacity: 0;
+  animation-duration: 1.2s;
+  animation-name: l1;
+  animation-delay: 0.3s;
+  animation-iteration-count: infinite;
+}
+#l5 {
+  opacity: 0;
+  animation-duration: 1.2s;
+  animation-name: l1;
+  animation-delay: 0.4s;
+  animation-iteration-count: infinite;
+}
+#l6 {
+  opacity: 0;
+  animation-duration: 1.2s;
+  animation-name: l1;
+  animation-delay: 0.5s;
+  animation-iteration-count: infinite;
+}
+#l7 {
+  opacity: 0;
+  animation-duration: 1.2s;
+  animation-name: l1;
+  animation-delay: 0.6s;
+  animation-iteration-count: infinite;
+}
+#l8 {
+  opacity: 0;
+  animation-duration: 1.2s;
+  animation-name: l1;
+  animation-delay: 0.7s;
+  animation-iteration-count: infinite;
+}
+#l9 {
+  opacity: 0;
+  animation-duration: 1.2s;
+  animation-name: l1;
+  animation-delay: 0.8s;
+  animation-iteration-count: infinite;
+}
+#add {
+  width: 100%;
+  animation-name: let;
+  animation-duration: 0.6s;
+}
+@keyframes let {
+  0% {
+    width: 85%;
+  }
 
- }
- #add2{
-    animation-name: hello;
-    animation-duration: 3s;  
- }
- #cam
- {
-     animation-iteration-count: infinite;
-    }
-@keyframes cam
-{
-0%{color:palevioletred;}   
-33%{color:#ffa48e;}
-66% {color:lightpink;}
-100%{color:palevioletred;}   
+  100% {
+    width: 100%;
+  }
 }
-@keyframes cam1
-{
-0%{color:purple;}   
-33%{color:brown;}
-66% {color:firebrick;}
-100%{color:purple;}   
+@keyframes hello {
+  0% {
+    display: none;
+    opacity: 0;
+  }
+  100% {
+    display: none;
+    opacity: 1;
+  }
 }
-.opa
-{
-opacity: 1;
-animation-name: opa;
-animation-duration: 1.2s;
+#add1 {
+  opacity: 1;
+  margin-left: 0px;
+  width: 100%;
+  animation-name: let;
+  animation-duration: 1.8s;
 }
-@keyframes opa{
-    0%{opacity: 0.3;}
-    100%{opacity: 1;}
+#add2 {
+  animation-name: hello;
+  animation-duration: 3s;
+}
+#cam {
+  animation-iteration-count: infinite;
+}
+@keyframes cam {
+  0% {
+    color: palevioletred;
+  }
+  33% {
+    color: #ffa48e;
+  }
+  66% {
+    color: lightpink;
+  }
+  100% {
+    color: palevioletred;
+  }
+}
+@keyframes cam1 {
+  0% {
+    color: purple;
+  }
+  33% {
+    color: brown;
+  }
+  66% {
+    color: firebrick;
+  }
+  100% {
+    color: purple;
+  }
+}
+.opa {
+  opacity: 1;
+  animation-name: opa;
+  animation-duration: 1.2s;
+}
+@keyframes opa {
+  0% {
+    opacity: 0.3;
+  }
+  100% {
+    opacity: 1;
+  }
 }
